# wgsleng

./: .gitignore  .npmignore  LICENSE  README.md  game.wgsl  index.html  input.wgsl  package.json  tiled-wgsleng-export.js  video.html  wgsl-game.js  wgsleng.js
.github/workflows/: release.yml
examples/bob/: helpers.wgsl  input.wgsl  main.wgsl
examples/bunny/: DESIGN.md  README.md  main.wgsl
examples/cubespin/: README.md  main.wgsl
examples/hello/: draw2d.wgsl  font.wgsl  main.wgsl
examples/input/: DRAWING.md  README.md  draw2d.wgsl  main.wgsl
examples/lib/: draw2d.wgsl  draw3d.md  draw3d.wgsl  font.md  font.wgsl
examples/logo/: main.wgsl
examples/osc/: main.wgsl  patch.pd
examples/raymarch/: README.md  draw3d.wgsl  main.wgsl
examples/rpg/: README.md  heroes.tsj  level1.tmj  main.wgsl  undrground.tmj
examples/rpg/map/: level1.wgsl  tileA1.tsj  tileA2.tsj  tileB.tsj  undrground.wgsl
examples/snake/: main.wgsl
examples/tetris/: main.wgsl
examples/video/: main.wgsl  patch.pd
native/: Cargo.toml
native/examples/: README.md  render_to_image.rs
native/src/: lib.rs  main.rs  obj_loader.rs
tools/: README.md  tiled_to_wgsl.py
