[package]
name = "wgsl-game"
version = "0.0.1"
edition = "2021"

[dependencies]
wgpu = "23"
winit = "0.30"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.25"
rodio = "0.19"
regex = "1.10"
env_logger = "0.11"
log = "0.4"
futures = "0.3"
zip = "2.2"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
png = "0.17"
